log
Wed 08 May 2024 12:30:20 AM UTC: 
 tests:  1|8
total_score: 0/70
0f11f11
Wed 08 May 2024 12:34:10 AM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:46:15: error: expected ‘;’ before ‘return’
   46 |     return new
      |               ^
      |               ;
   47 |     return NULL;
      |     ~~~~~~     
Compilation failed
cc72c1b
Wed 08 May 2024 12:34:14 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
7e09348
Wed 08 May 2024 12:34:31 AM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  4|7
total_score: 5/70
aae5cfa
Wed 08 May 2024 12:42:51 AM UTC: 
 treemap.c | 42 ++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 42 insertions(+)
 tests:  3|7
total_score: 5/70
be0c0d4
Wed 08 May 2024 12:48:23 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
492c36a
Wed 08 May 2024 12:50:21 AM UTC: 
 treemap.c | 39 ++++++++++++++++++++-------------------
 1 file changed, 20 insertions(+), 19 deletions(-)
 tests:  3|7
total_score: 5/70
e981abc
Wed 08 May 2024 12:51:15 AM UTC: 
 treemap.c | 38 +++++++++++++++++++-------------------
 1 file changed, 19 insertions(+), 19 deletions(-)
 tests:  3|7
total_score: 5/70
57c4e14
Wed 08 May 2024 12:53:35 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
4a6ca31
Wed 08 May 2024 12:54:35 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
ed10eff
Wed 08 May 2024 12:55:26 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
4fad736
Wed 08 May 2024 12:59:50 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|7
total_score: 5/70
38da077
Wed 08 May 2024 01:03:12 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  5|7
total_score: 5/70
cbfea51
Wed 08 May 2024 01:07:18 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:97:26: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   97 |                     free(pair);
      |                          ^~~~
      |                          Pair
treemap.c:97:26: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:62:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   62 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
244d508
Wed 08 May 2024 01:07:25 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   62 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
0022c60
Wed 08 May 2024 01:13:25 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:62:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   62 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
3253ca0
Wed 08 May 2024 01:13:47 AM UTC: 
 treemap.c | 47 -----------------------------------------------
 1 file changed, 47 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:16: error: unused variable ‘new’ [-Werror=unused-variable]
   53 |     TreeNode * new = createTreeNode(key, value);
      |                ^~~
cc1: all warnings being treated as errors
Compilation failed
a09718b
Wed 08 May 2024 01:13:58 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
b8baf26
Wed 08 May 2024 01:15:48 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  4|7
total_score: 5/70
31831e5
Wed 08 May 2024 01:20:35 AM UTC: 
 treemap.c | 42 ++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 40 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:86:41: error: expected ‘;’ before ‘:’ token
   86 |                         aux = aux->right:
      |                                         ^
      |                                         ;
Compilation failed
fd5a0d0
Wed 08 May 2024 01:20:45 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|6
total_score: 5/70
e90a7a6
Wed 08 May 2024 01:32:10 AM UTC: 
 treemap.c | 39 ++++++++++++++++++---------------------
 1 file changed, 18 insertions(+), 21 deletions(-)
 tests:  0|0
af2ff73
Wed 08 May 2024 01:33:31 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|6
total_score: 5/70
0180230
Wed 08 May 2024 01:35:28 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  8|5
total_score: 15/70
70594cf
Wed 08 May 2024 01:46:54 AM UTC: 
 tests:  8|5
total_score: 15/70
6997963
Wed 08 May 2024 01:47:41 AM UTC: 
 treemap.c | 40 ----------------------------------------
 1 file changed, 40 deletions(-)
 tests:  6|6
total_score: 5/70
480fde8
Wed 08 May 2024 01:53:54 AM UTC: 
 treemap.c | 37 +++++++++++++++++++++++++++++++++++++
 1 file changed, 37 insertions(+)
 tests:  8|5
total_score: 15/70
4cf6775
Wed 08 May 2024 02:08:20 AM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  8|5
total_score: 15/70
62509e6
Wed 08 May 2024 02:09:04 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
4d91925
Wed 08 May 2024 02:09:25 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
a1bde02
Wed 08 May 2024 02:10:03 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
d3fb2d4
Wed 08 May 2024 02:13:45 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:120:17: error: too few arguments to function ‘is_equal’
  120 |             if (is_equal(key, aux->pair->key))
      |                 ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
Compilation failed
6c89334
Wed 08 May 2024 02:13:55 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:120:21: error: ‘TreeMap’ has no member named ‘is_equal’
  120 |             if (tree->is_equal(key, aux->pair->key))
      |                     ^~
Compilation failed
edfa62b
Wed 08 May 2024 02:14:12 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
c219c97
Wed 08 May 2024 02:36:07 AM UTC: 
 treemap.c | 76 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 76 insertions(+)
 tests:  15|4
total_score: 25/70
88957aa
Wed 08 May 2024 02:38:09 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
8fc7904
Wed 08 May 2024 02:39:59 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
320f6bc
Wed 08 May 2024 02:42:08 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
635d382
Wed 08 May 2024 02:43:18 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
e6aadf7
Wed 08 May 2024 02:44:56 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
68104a7
Wed 08 May 2024 02:45:41 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:103:38: error: expected identifier before ‘)’ token
  103 |     while (aux != NULL && aux->pair->)
      |                                      ^
Compilation failed
1ffec7d
Wed 08 May 2024 02:45:53 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
e2bca92
Wed 08 May 2024 02:46:23 AM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
6d09681
Wed 08 May 2024 02:46:35 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
1fda1b0
